--- a/Ch01 - Axiomatic Set Theory/lec03.tex
+++ b/Ch01 - Axiomatic Set Theory/lec03.tex
@@ -15,13 +15,13 @@ Some basic terminologies:
 \begin{itemize}
 	\item \(A\) is called the \emph{domain} of \(\phi\).
 	\item \(B\) is called the \emph{co-domain} of \(\phi\).
-	\item The set \(\phi(A) \equiv \img_\phi(A) := \qty{\phi(a) \in B \mid a \in A}\) is called the \emph{image} of \(A\) under \(\phi\).
+	\item The set \(\phi(A) \equiv \im_\phi(A) := \qty{\phi(a) \in B \mid a \in A}\) is called the \emph{image} of \(A\) under \(\phi\).
 \end{itemize}
 
 \begin{definition}
 	Let \(A\) and \(B\) be sets. A map \(\phi: A \to B\) is called
 	\begin{itemize}
-		\item \emph{Surjective} (or \emph{onto}) if and only if \(\img_\phi(A) = B\).
+		\item \emph{Surjective} (or \emph{onto}) if and only if \(\im_\phi(A) = B\).
 		\item \emph{Injective} (or \emph{one-to-one}) if and only if for all \(a_1, a_2 \in A\), \(\phi(a_1) = \phi(a_2) \implies a_1 = a_2\).
 		\item \emph{Bijective} if and only if it is both surjective and injective.
 	\end{itemize}
@@ -395,4 +395,3 @@ With this, one can define a ball in \(\R^d\) as
 	is called the \emph{ball} of radius \(r\) centered at \(x\).
 \end{definition}
 Later on, we will see that we denote these sets as ``open balls''.
-
