--- a/commands.tex
+++ b/commands.tex
@@ -39,7 +39,7 @@
 \DeclareMathOperator{\preimg}{preim}
 \DeclareMathAlphabet{\euscr}{U}{eus}{m}{n}
 \DeclareMathOperator{\powerset}{\euscr{P}}
-\DeclareMathOperator{\setIso}{\cong_{\text{set}}}
+\DeclareMathOperator{\setIso}{\mathrel{\cong_{\text{set}}}}
 \usetikzlibrary{cd}
 \renewcommand{\nsim}{\not\sim}
 \newcommand{\into}{\hookrightarrow}
@@ -48,14 +48,14 @@
 \renewcommand{\O}{\mathcal{O}}
 \newcommand{\Ostd}{\mathcal{O}_{\text{std.}}}
 \newcommand{\Oq}[1]{\mathcal{O}_{\faktor{#1}{\sim}}}
-\DeclareMathOperator{\topIso}{\cong_{\text{top.}}}
+\DeclareMathOperator{\topIso}{\mathrel{\cong_{\text{top.}}}}
 \DeclareMathOperator{\supp}{supp}
 \DeclareMathOperator{\dcup}{\dot{\cup}}
-\DeclareMathOperator{\grpIso}{\cong_{\text{grp}}}
+\DeclareMathOperator{\grpIso}{\mathrel{\cong_{\text{grp}}}}
 
 % Ch03 - Topological Manifolds and Bundles %
 \usetikzlibrary{decorations.markings}
-\DeclareMathOperator{\bdlIso}{\cong_{\text{bdl}}}
+\DeclareMathOperator{\bdlIso}{\mathrel{\cong_{\text{bdl}}}}
 \DeclareMathOperator{\proj}{proj}
 \newcommand{\A}{\mathscr{A}}
 \newcommand{\I}{\mathrm{i}}
@@ -63,8 +63,8 @@
 % Ch04 - Differentiable Manifolds %
 \usepackage{bbding}
 \newcommand{\flower}{{\scalebox{0.75}{\FiveFlowerOpen} }}
-\DeclareMathOperator{\diffIso}{\cong_{\text{diff}}}
-\DeclareMathOperator{\vecIso}{\cong_{\text{vec}}}
+\DeclareMathOperator{\diffIso}{\mathrel{\cong_{\text{diff}}}}
+\DeclareMathOperator{\vecIso}{\mathrel{\cong_{\text{vec}}}}
 \DeclareMathOperator{\Hom}{Hom}
 \DeclareSymbolFont{MnSyC}{U}{MnSymbolC}{m}{n}
 \DeclareMathSymbol{\diamondplus}{\mathbin}{MnSyC}{"7C}
@@ -72,7 +72,7 @@
 \DeclareMathOperator{\End}{End}
 \DeclareMathOperator{\Aut}{Aut}
 \usepackage{tensor}
-\DeclareMathOperator{\hateq}{\hat{=}}
+\DeclareMathOperator{\hateq}{\mathrel{\hat{=}}}
 \DeclareMathOperator{\sgn}{sgn}
 \DeclareMathOperator{\vol}{vol}
 
